import Superboard JS

--- a/flutter_demo/web/index.html
+++ b/flutter_demo/web/index.html
@@ -38,7 +38,7 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
-<!--  <script src="assets/packages/zego_superboard/assets/ZegoSuperboardWebFlutterWrapper.js"></script>-->
+  <script src="assets/packages/zego_superboard/assets/ZegoSuperboardWebFlutterWrapper.js"></script>
 </head>
 <body>
 <script>
